[package]
name = "tpt"
version = "0.2.0"
authors = ["IceBlockProduction <iceblockproduction@protonmail.com>"]
description = "A Rust implementation of the Unix concatenate (cat) and word-count (wc) command"
license = "MIT"
categories = ["command-line-utilities", "text-processing"]
keywords = ["cat", "wc","cli"]
edition = "2018"
repository = "https://github.com/IceBlockProduction/tpt"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tpt"
path = "src/lib.rs"

[dependencies]
structopt = "0.3.17"