[package]
name = "tpt"
version = "0.3.0"
authors = ["Schmid7k>"]
description = "Pure Rust implementation of the Unix concatenate (cat), word-count (wc) and echo command"
license = "MIT"
categories = ["command-line-utilities", "text-processing"]
keywords = ["cat", "wc", "cli"]
edition = "2018"
repository = "https://github.com/Schmid7k/tpt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tpt"
path = "src/lib.rs"

[dependencies]
structopt = "0.3.26"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
rpath = false
incremental = false
